# piirakka

./: .codacy.yml  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RemixIcon_Collection_2411260015.remixicon  RemixIcon_Collection_2501172210.remixicon  RemixIcon_Collection_2510280506.remixicon  RemixIcon_Collection_2603081915.remixicon  RemixIcon_Collection_2603082008.remixicon  alembic.ini  asd.html  package-lock.json  package.json  pyproject.toml  requirements.txt  stations.json  stations.txt  tailwind.config.js
alembic/versions/: 3bacc5197410_make_station_name_unique.py  3f1f40d79458_create_stations_table.py
favicon_io/: about.txt
piirakka/: alembic.ini  app_factory.py  context.py  main.py  piirakka  preflight.py  starlette_main.py
piirakka/core/: __init__.py  app_factory.py  background.py  context.py  preflight.py
piirakka/migrations/: env.py
piirakka/migrations/versions/: 30f04c4e93c9_add_listen_time_to_station.py  627c19c2a4d3_initialize_station_model.py  68fadbd285d9_added_sort_order_column.py
piirakka/model/: event.py  player.py  player_context.py  player_state.py  recent_track.py  sidebar_item.py  station.py
piirakka/services/: track_history.py  websocket.py
piirakka/static/: index.html
piirakka/static/css/: index.css  legacy_stations.css  main.css  output.css  stations.css  tailwind.css
piirakka/static/js/: app.js  index.js  stations.js  websocket.js
piirakka/templates/: base.html  index.html  legacy_stations.html  new_grid.html  stations.html
piirakka/templates/base/: error_dialog.html  head.html
piirakka/templates/components/: add_station_modal.html  edit_station_modal.html  head.html  legacy_error_dialog.html  now_playing_display.html  player.html  recent_track.html  recent_tracks.html  sidebar.html  station_settings.html  track_history.html  welcome.html
piirakka/utils/: player.py
piirakka/views/: pages.py  playback.py  stations.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
scripts/: somafm.py
src/: main.py
src/templates/: index.html
src/utils/: player.py  title_grabber.py
tests/: __init__.py  conftest.py  test_player.py  test_station.py
