[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piirakka"
version = "0.1.0"
description = "Online radio player"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["piirakka/requirements.in"]}

[project.scripts]
piirakka = "piirakka.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"piirakka" = ["templates/*", "static/*"]
"" = ["alembic.ini"]
