[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piirakka"
description = "Online radio player"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["piirakka/requirements.in"]}
version = {attr = "piirakka.__version__.__version__"}

[project.scripts]
piirakka = "piirakka.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"piirakka" = ["templates/*", "static/*"]
"*" = ["alembic.ini"]
