[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piirakka"
description = "Online radio playback for social spaces"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["piirakka/requirements.in"]}
version = {attr = "piirakka.__version__.__version__"}

[project.scripts]
piirakka = "piirakka.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"piirakka" = ["templates/*", "static/*", "migrations/alembic.ini"]

[tool.bandit]
skips = ["B104", "B404", "B311"]

[tool.bandit.any_other_function_with_shell_equals_true]
subprocess = ["subprocess.Popen"]

[tool.ruff]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.djlint]
profile="jinja"
